<resources>
    <string name="app_name">mvp-example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="portfolio">Портфель</string>
    <string name="cost">Цена</string>
    <string name="total_profit">Общая прибыль</string>
    <string name="profitability">Рентабельность</string>
    <string name="change_per_day">Изменение за день</string>
    <string name="title_activity_entry_point_view">Вход в приложение</string>

    <string name="loading">Loading</string>

    <string name="profile_composition">Состав портфеля</string>
    <string name="stocks">Акции</string>
    <string name="cryptocurrency">Криптовалюта</string>
    <string name="bonds">Облигации</string>
    <string name="assets">Активы</string>
    <string name="all_assets">Все активы</string>

    <string name="asset">Актив</string>
    <string name="count">Количество</string>
    <string name="cur_prise">Тек.\nцена, $</string>
    <string name="sum_profit_dollar">Сум.\nприбыль, $</string>
    <string name="profitability_percent">Прибыль,\n%</string>


    <string name="date_of_first_transaction">Дата первой транзакции</string>
    <string name="lot_size">Размер лота</string>
    <string name="total_shares">Всего акций</string>
    <string name="average_price_at_wholesale_position">Средняя цена \nпо оптовой позиции</string>
    <string name="current_price">Текущая цена</string>
    <string name="pl_for_day">P/L за день</string>
    <string name="current_value">Текущая стоимость</string>
    <string name="cost_of_purchases">Стоимость покупок</string>
    <string name="sales_value">Стоимость продаж</string>
    <string name="category_share">Доля категории</string>
    <string name="portfolio_share">Доля портфеля</string>


    <string name="current_profit">Текущая прибыль</string>
    <string name="profit_on_transactions">Прибыль от сделок</string>
    <string name="amount_of_dividends">Сумма дивидендов</string>
    <string name="commissions">Комиссии</string>

    <string name="income">Доход</string>
    <string name="app_name_ultra">Mammoth</string>
    <string name="transition"> - </string>
    <string name="issuers">Эмитеты</string>
    <string name="countries">Страны</string>
    <string name="industry">Отрасли</string>
    <string name="currencies">Валюты</string>
    <string name="categories">Виды активов</string>
    <string name="brokers">Брокеры</string>
    <string name="banks">Банки</string>

</resources>
    <!-->